--- a/css/place.css
+++ b/css/place.css
@@ -19,6 +19,16 @@
   background-size: cover;
 }
 
+.foodeTop {
+  background: url(../img/index-bg-3.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.aboutTop {
+  background: url(../img/about/aboutTop-bg.jpg) no-repeat center;
+  background-size: cover;
+}
+
 .topBox header {
   position: absolute;
   top: 5%;
@@ -106,24 +116,24 @@
   position: absolute;
   top: 25%;
   left: 5%;
+}
+
+.topBox .slogan .sloganPic {
+  width: 34.5rem;
   -webkit-animation: flyLeftAnimate 1s ease-in-out 1;
   -moz-animation: flyLeftAnimate 1s ease-in-out 1;
   -o-animation: flyLeftAnimate 1s ease-in-out 1;
   animation: flyLeftAnimate 1s ease-in-out 1;
 }
 
-.topBox .slogan .sloganPic {
-  width: 34.5rem;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
-
 .topBox .slogan .slogan-nr {
   margin-top: 30%;
   font-size: 2.5rem;
   color: #fff;
+  -webkit-animation: flyLeftAnimate 1.2s ease-in-out 1;
+  -moz-animation: flyLeftAnimate 1.2s ease-in-out 1;
+  -o-animation: flyLeftAnimate 1.2s ease-in-out 1;
+  animation: flyLeftAnimate 1.2s ease-in-out 1;
 }
 
 .topBox .slogan .strip {
@@ -131,10 +141,10 @@
   height: 0.83rem;
   margin-top: 10%;
   background-color: #fbd34b;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+  -webkit-animation: flyLeftAnimate 1.4s ease-in-out 1;
+  -moz-animation: flyLeftAnimate 1.4s ease-in-out 1;
+  -o-animation: flyLeftAnimate 1.4s ease-in-out 1;
+  animation: flyLeftAnimate 1.4s ease-in-out 1;
 }
 
 @media only screen and (max-width: 1440px) {
@@ -169,10 +179,10 @@
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  -webkit-animation: flyRightAnimate 1.5s ease-in-out 1;
-  -moz-animation: flyRightAnimate 1.5s ease-in-out 1;
-  -o-animation: flyRightAnimate 1.5s ease-in-out 1;
-  animation: flyRightAnimate 1.5s ease-in-out 1;
+  -webkit-animation: flyRightAnimate 1s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1s ease-in-out 1;
+  -o-animation: flyRightAnimate 1s ease-in-out 1;
+  animation: flyRightAnimate 1s ease-in-out 1;
 }
 
 .daily .dailyPic {
@@ -187,15 +197,16 @@
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  -webkit-animation: flyRightAnimate 2s ease-in-out 1;
-  -moz-animation: flyRightAnimate 2s ease-in-out 1;
-  -o-animation: flyRightAnimate 2s ease-in-out 1;
-  animation: flyRightAnimate 2s ease-in-out 1;
+  -webkit-animation: flyRightAnimate 1.1s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1.1s ease-in-out 1;
+  -o-animation: flyRightAnimate 1.1s ease-in-out 1;
+  animation: flyRightAnimate 1.1s ease-in-out 1;
 }
 
 .daily .dailyPic ul {
   position: absolute;
-  width: 136.8rem;
+  /*left: 0;*/
+  width: 200rem;
 }
 
 .daily .dailyPic ul li {
@@ -252,10 +263,10 @@
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  -webkit-animation: flyRightAnimate 2s ease-in-out 1;
-  -moz-animation: flyRightAnimate 2s ease-in-out 1;
-  -o-animation: flyRightAnimate 2s ease-in-out 1;
-  animation: flyRightAnimate 2s ease-in-out 1;
+  -webkit-animation: flyRightAnimate 1.2s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1.2s ease-in-out 1;
+  -o-animation: flyRightAnimate 1.2s ease-in-out 1;
+  animation: flyRightAnimate 1.2s ease-in-out 1;
 }
 
 .daily h1 {
@@ -294,14 +305,32 @@
   left: 65%;
 }
 
-.daily h1,
-.daily .dailyStrip,
-.daily .dailyContent,
+.daily h1 {
+  -webkit-animation: flyRightAnimate 1.2s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1.2s ease-in-out 1;
+  -o-animation: flyRightAnimate 1.2s ease-in-out 1;
+  animation: flyRightAnimate 1.2s ease-in-out 1;
+}
+
+.daily .dailyStrip {
+  -webkit-animation: flyRightAnimate 1.3s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1.3s ease-in-out 1;
+  -o-animation: flyRightAnimate 1.3s ease-in-out 1;
+  animation: flyRightAnimate 1.3s ease-in-out 1;
+}
+
+.daily .dailyContent {
+  -webkit-animation: flyRightAnimate 1.4s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1.4s ease-in-out 1;
+  -o-animation: flyRightAnimate 1.4s ease-in-out 1;
+  animation: flyRightAnimate 1.4s ease-in-out 1;
+}
+
 .daily .dailyDetailBtn {
-  -webkit-animation: flyRightAnimate 2.5s ease-in-out 1;
-  -moz-animation: flyRightAnimate 2.5s ease-in-out 1;
-  -o-animation: flyRightAnimate 2.5s ease-in-out 1;
-  animation: flyRightAnimate 2.5s ease-in-out 1;
+  -webkit-animation: flyRightAnimate 1.5s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1.5s ease-in-out 1;
+  -o-animation: flyRightAnimate 1.5s ease-in-out 1;
+  animation: flyRightAnimate 1.5s ease-in-out 1;
 }
 
 .detailBtn {
@@ -389,7 +418,7 @@
     height: 19.8rem;
   }
   .daily .dailyPic ul {
-    width: 95.76rem;
+    width: 130rem;
   }
   .daily .daily-slideBtn {
     top: 19.8rem;
@@ -612,7 +641,8 @@
 }
 
 .typeList .colList .product .product-content h3 {
-  font-size: 18px;
+  margin: 5px 0 15px;
+  font-size: 20px;
   line-height: 3;
   color: #fff;
 }
@@ -629,7 +659,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100px;
   height: 2px;
   background-color: #fbd34b;
 }
@@ -1122,6 +1152,314 @@ footer .info .info-nr p {
     -ms-transform: translateX(0);
     -o-transform: translateX(0);
     transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+/*
+============================
+关于我们页面
+============================
+*/
+
+
+/*slogan*/
+
+.topBox .aboutTop-bigSlogan {
+  position: absolute;
+  top: 29%;
+  left: 39%;
+  z-index: 11;
+  width: 34.4rem;
+  opacity: 0;
+  -webkit-animation: flyDown 1s ease-in-out 1s 1 forwards;
+  -moz-animation: flyDown 1s ease-in-out 1s 1 forwards;
+  -o-animation: flyDown 1s ease-in-out 1s 1 forwards;
+  animation: flyDown 1s ease-in-out 1s 1 forwards;
+}
+
+.topBox .aboutTop-bigSlogan span {
+  display: block;
+  position: absolute;
+  top: -1rem;
+  left: 6rem;
+  z-index: -1;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: #fbd34b;
+  opacity: 0;
+  -webkit-animation: flyDown 1s ease-in-out 1s 1 forwards;
+  -moz-animation: flyDown 1s ease-in-out 1s 1 forwards;
+  -o-animation: flyDown 1s ease-in-out 1s 1 forwards;
+  animation: flyDown 1s ease-in-out 1s 1 forwards;
+}
+
+.topBox .aboutTop-leftSlogan {
+  position: absolute;
+  top: 46%;
+  left: 5%;
+  font-size: 2.5rem;
+  color: #fff;
+  -webkit-animation: flyRightAnimate 1s ease-in-out 1;
+  -moz-animation: flyRightAnimate 1s ease-in-out 1;
+  -o-animation: flyRightAnimate 1s ease-in-out 1;
+  animation: flyRightAnimate 1s ease-in-out 1;
+}
+
+.topBox .aboutTop-rightSlogan {
+  position: absolute;
+  top: 46%;
+  right: 5%;
+  font-size: 2.5rem;
+  color: #fff;
+  -webkit-animation: flyLeftAnimate 1s ease-in-out 1;
+  -moz-animation: flyLeftAnimate 1s ease-in-out 1;
+  -o-animation: flyLeftAnimate 1s ease-in-out 1;
+  animation: flyLeftAnimate 1s ease-in-out 1;
+}
+
+.topBox .aboutTop-bigSlogan img,
+.topBox .aboutTop-leftSlogan img,
+.topBox .aboutTop-rightSlogan img {
+  width: 100%;
+}
+
+.topBox .aboutTop-strip {
+  position: absolute;
+  left: 50%;
+  bottom: 20%;
+  width: 18rem;
+  height: 4px;
+  background-color: #fbd34b;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+@media only screen and (max-width: 1440px) {
+  .topBox .aboutTop-bigSlogan {
+    width: 24.1rem;
+  }
+  .topBox .aboutTop-leftSlogan {
+    width: 8rem;
+  }
+  .topBox .aboutTop-rightSlogan {
+    width: 7rem;
+  }
+  .topBox .aboutTop-strip {
+    width: 12.5rem;
+  }
+}
+
+
+/*关于我们*/
+
+.about-container {
+  width: 80%;
+  margin: 5rem auto;
+}
+
+.about-container section {
+  position: relative;
+  width: 100%;
+  margin-bottom: 10rem;
+}
+
+.about-container section h2 {
+  margin-bottom: 5rem;
+  font-size: 4rem;
+  color: #fff;
+  text-align: center;
+}
+
+.about-container .aboutus .aboutus-content {
+  position: relative;
+  height: 45.7rem;
+}
+
+.about-container .aboutus img {
+  position: absolute;
+  top: 1rem;
+  left: 0;
+  z-index: 10;
+  width: 68.5rem;
+}
+
+.about-container .aboutus .aboutus-info {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 9;
+  width: 54.75rem;
+  height: 45.7rem;
+  background-color: #fbd34d;
+}
+
+.about-container .contactus img {
+  float: right;
+  width: 45%;
+}
+
+.about-container .contactus .contactus-info {
+  float: left;
+  width: 55%;
+  height: 45.7rem;
+  background-color: #fbd34d;
+}
+
+@media only screen and (max-width: 1440px) {
+  .about-container section h2 {
+    font-size: 2.8rem;
+  }
+  .about-container .aboutus .aboutus-content {
+    height: 32rem;
+  }
+  .about-container .aboutus img {
+    width: 47.95rem;
+  }
+  .about-container .aboutus .aboutus-info {
+    width: 50rem;
+    height: 32rem;
+  }
+}
+
+
+/*about页面动画*/
+
+@-webkit-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  85% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  85% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  85% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-o-keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  85% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes flyDown {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  85% {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
     opacity: 1;
   }
 }
