--- a/css/place.css
+++ b/css/place.css
@@ -858,6 +858,9 @@ footer .info .info-nr p {
   width: 100%;
 }
 
+
+/*二维码出现动画*/
+
 @-webkit-keyframes wechatPic {
   0% {
     -webkit-transform: translateX(-30px);
@@ -1159,24 +1162,334 @@ footer .info .info-nr p {
 
 /*
 ============================
+详情弹出页面
+============================
+*/
+
+.detailCover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: auto;
+  padding-bottom: 100px;
+  background-color: rgba(1, 8, 24, .8);
+}
+
+.detailCover .detailContent {
+  box-sizing: border-box;
+  width: 90%;
+  height: auto;
+  margin-left: 10%;
+  padding: 2% 5%;
+  border: 4px solid #fbd34b;
+  background-color: #010818;
+}
+
+.detailCover .detailContent h2 {
+  margin-bottom: 40px;
+  font-size: 24px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.detailCover .detailContent h2 span {
+  float: right;
+}
+
+/*详情图片*/
+.picSlideBox {
+  width: 100%;
+}
+
+.picSlideBox .picSlideBig {
+  width: 20000px;
+}
+
+.picSlideBox .picSlideBig li {
+  float: left;
+}
+
+.picSlideBox .picSlideBig li img {
+  width: 100%;
+}
+
+/*关闭按钮*/
+
+.closeBtn {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.closeBtn i {
+  position: absolute;
+  display: inline-block;
+  width: 2px;
+  height: 20px;
+  background-color: #fbd34b;
+  transform-origin: center 11px;
+}
+
+.closeBtn i:nth-child(1) {
+  left: 10px;
+  top: 2px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.closeBtn i:nth-child(2) {
+  right: 10px;
+  top: 2px;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.closeBtnAnimate:hover i:nth-child(1) {
+  animation: closeBtnA .5s ease-in-out 2;
+}
+
+.closeBtnAnimate:hover i:nth-child(2) {
+  animation: closeBtnB .5s ease-in-out 2;
+}
+
+@-webkit-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-moz-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-ms-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-o-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-webkit-keyframes closeBtnB {
+  0% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+  50% {
+  -webkit-transform: rotate(-80deg);
+  -moz-transform: rotate(-80deg);
+  -o-transform: rotate(-80deg);
+  transform: rotate(-80deg);
+  }
+  100% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+}
+
+@-moz-keyframes closeBtnB {
+  0% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+  50% {
+  -webkit-transform: rotate(-80deg);
+  -moz-transform: rotate(-80deg);
+  -o-transform: rotate(-80deg);
+  transform: rotate(-80deg);
+  }
+  100% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+}
+
+@-ms-keyframes closeBtnB {
+  0% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+  50% {
+  -webkit-transform: rotate(-80deg);
+  -moz-transform: rotate(-80deg);
+  -o-transform: rotate(-80deg);
+  transform: rotate(-80deg);
+  }
+  100% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+}
+
+@-o-keyframes closeBtnB {
+  0% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+  50% {
+  -webkit-transform: rotate(-80deg);
+  -moz-transform: rotate(-80deg);
+  -o-transform: rotate(-80deg);
+  transform: rotate(-80deg);
+  }
+  100% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+}
+
+@keyframes closeBtnB {
+  0% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+  50% {
+  -webkit-transform: rotate(-80deg);
+  -moz-transform: rotate(-80deg);
+  -o-transform: rotate(-80deg);
+  transform: rotate(-80deg);
+  }
+  100% {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+}
+
+
+/*
+============================
 关于我们页面
 ============================
 */
 
 
-/*slogan*/
+/*头部*/
 
 .topBox .aboutTop-bigSlogan {
   position: absolute;
-  top: 29%;
-  left: 39%;
+  top: 50%;
+  left: 50%;
   z-index: 11;
   width: 34.4rem;
   opacity: 0;
-  -webkit-animation: flyDown 1s ease-in-out 1s 1 forwards;
-  -moz-animation: flyDown 1s ease-in-out 1s 1 forwards;
-  -o-animation: flyDown 1s ease-in-out 1s 1 forwards;
-  animation: flyDown 1s ease-in-out 1s 1 forwards;
+  -webkit-animation: scaleDown .5s ease-in-out .7s 1 forwards;
+  -moz-animation: scaleDown .5s ease-in-out .7s 1 forwards;
+  -o-animation: scaleDown .5s ease-in-out .7s 1 forwards;
+  animation: scaleDown .5s ease-in-out .7s 1 forwards;
 }
 
 .topBox .aboutTop-bigSlogan span {
@@ -1188,11 +1501,6 @@ footer .info .info-nr p {
   width: 2.5rem;
   height: 2.5rem;
   background-color: #fbd34b;
-  opacity: 0;
-  -webkit-animation: flyDown 1s ease-in-out 1s 1 forwards;
-  -moz-animation: flyDown 1s ease-in-out 1s 1 forwards;
-  -o-animation: flyDown 1s ease-in-out 1s 1 forwards;
-  animation: flyDown 1s ease-in-out 1s 1 forwards;
 }
 
 .topBox .aboutTop-leftSlogan {
@@ -1258,7 +1566,7 @@ footer .info .info-nr p {
 /*关于我们*/
 
 .about-container {
-  width: 80%;
+  width: 1200px;
   margin: 5rem auto;
 }
 
@@ -1282,10 +1590,11 @@ footer .info .info-nr p {
 
 .about-container .aboutus img {
   position: absolute;
-  top: 1rem;
+  top: .5rem;
   left: 0;
   z-index: 10;
   width: 68.5rem;
+  opacity: 0;
 }
 
 .about-container .aboutus .aboutus-info {
@@ -1296,21 +1605,108 @@ footer .info .info-nr p {
   width: 54.75rem;
   height: 45.7rem;
   background-color: #fbd34d;
+  opacity: 0;
+}
+
+.aboutus-info .aboutus-info-text {
+  position: absolute;
+  left: 30%;
+  top: 5%;
+  width: 60%;
+}
+
+.aboutus-info .aboutus-info-text h3 {
+  font-size: 20px;
+  margin-bottom: 25px;
+}
+
+.aboutus-info .aboutus-info-text .line {
+  width: 40px;
+  height: 2px;
+  background-color: #010818;
+  margin-bottom: 15px;
+}
+
+.aboutus-info .aboutus-info-text p {
+  font-size: 14px;
+  margin-bottom: 15px;
+  text-align: justify;
 }
 
 .about-container .contactus img {
   float: right;
   width: 45%;
+  opacity: 0;
 }
 
 .about-container .contactus .contactus-info {
   float: left;
   width: 55%;
   height: 45.7rem;
-  background-color: #fbd34d;
+  margin-top: 3rem;
+  background-color: #0e1c3d;
+  opacity: 0;
+}
+
+.about-container .contactus .contactus-info .line {
+  width: 180px;
+  height: 2px;
+  margin-left: 10%;
+  background-color: #fbd34b;
+}
+
+.contactus-info .contactus-info-text {
+  width: 70%;
+  margin: 5% 0 0 10%;
+}
+
+.contactus-info .contactus-info-text h3 {
+  font-size: 20px;
+  margin-bottom: 40px;
+  color: #fff;
+}
+
+.contactus-info .contactus-info-text .contactus-info-text-left {
+  float: left;
+  width: 30%;
+}
+
+.contactus-info .contactus-info-text .contactus-info-text-left p {
+  position: relative;
+  margin-bottom: 1.5rem;
+  text-align: right;
+  line-height: 1.3;
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.contactus-info .contactus-info-text .contactus-info-text-left p span {
+  position: absolute;
+  top: 11px;
+  right: -40px;
+  display: inline-block;
+  width: 2px;
+  height: 15px;
+  background-color: #fbd34b;
+}
+
+.contactus-info .contactus-info-text .contactus-info-text-right {
+  float: right;
+  width: 50%;
+}
+
+.contactus-info .contactus-info-text .contactus-info-text-right p {
+  margin-bottom: 1.5rem;
+  font-size: 16px;
+  line-height: 2.5;
+  color: #fff;
 }
 
 @media only screen and (max-width: 1440px) {
+  .about-container {
+    width: 1000px;
+  }
   .about-container section h2 {
     font-size: 2.8rem;
   }
@@ -1321,145 +1717,108 @@ footer .info .info-nr p {
     width: 47.95rem;
   }
   .about-container .aboutus .aboutus-info {
-    width: 50rem;
-    height: 32rem;
+    width: 45rem;
+    height: 33rem;
+  }
+  .about-container .contactus .contactus-info {
+    height: 25rem;
   }
 }
 
 
 /*about页面动画*/
 
-@-webkit-keyframes flyDown {
+@-webkit-keyframes scaleDown {
   0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
+    -webkit-transform: translate(-50%, -70%);
+    -moz-transform: translate(-50%, -70%);
+    -ms-transform: translate(-50%, -70%);
+    -o-transform: translate(-50%, -70%);
+    transform: translate(-50%, -70%);
     opacity: 0;
   }
-  85% {
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    opacity: 1;
-  }
   100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     opacity: 1;
   }
 }
 
-@-moz-keyframes flyDown {
+@-moz-keyframes scaleDown {
   0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
+    -webkit-transform: translate(-50%, -70%);
+    -moz-transform: translate(-50%, -70%);
+    -ms-transform: translate(-50%, -70%);
+    -o-transform: translate(-50%, -70%);
+    transform: translate(-50%, -70%);
     opacity: 0;
   }
-  85% {
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    opacity: 1;
-  }
   100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     opacity: 1;
   }
 }
 
-@-ms-keyframes flyDown {
+@-ms-keyframes scaleDown {
   0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
+    -webkit-transform: translate(-50%, -70%);
+    -moz-transform: translate(-50%, -70%);
+    -ms-transform: translate(-50%, -70%);
+    -o-transform: translate(-50%, -70%);
+    transform: translate(-50%, -70%);
     opacity: 0;
   }
-  85% {
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    opacity: 1;
-  }
   100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     opacity: 1;
   }
 }
 
-@-o-keyframes flyDown {
+@-o-keyframes scaleDown {
   0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
+    -webkit-transform: translate(-50%, -70%);
+    -moz-transform: translate(-50%, -70%);
+    -ms-transform: translate(-50%, -70%);
+    -o-transform: translate(-50%, -70%);
+    transform: translate(-50%, -70%);
     opacity: 0;
   }
-  85% {
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    opacity: 1;
-  }
   100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     opacity: 1;
   }
 }
 
-@keyframes flyDown {
+@keyframes scaleDown {
   0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
+    -webkit-transform: translate(-50%, -70%);
+    -moz-transform: translate(-50%, -70%);
+    -ms-transform: translate(-50%, -70%);
+    -o-transform: translate(-50%, -70%);
+    transform: translate(-50%, -70%);
     opacity: 0;
   }
-  85% {
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
-    opacity: 1;
-  }
   100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     opacity: 1;
   }
 }
