--- a/css/index.css
+++ b/css/index.css
@@ -48,15 +48,15 @@
 
 .fullpage-ad .ad-content {
   position: fixed;
+  top: 50%;
+  left: 50%;
   z-index: 5;
-  width: 100%;
-  height: 100%;
   text-align: center;
+  transform: translate(-50%, -50%);
 }
 
 .fullpage-ad .ad-content img.num1 {
   width: 100rem;
-  margin-top: 17.5rem;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
@@ -102,7 +102,7 @@
 @media only screen and (max-width: 1440px) {
   .fullpage-ad .ad-content img.num1 {
     width: 70rem;
-    margin-top: 11rem;
+    /*margin-top: 11rem;*/
   }
   .fullpage-ad .ad-content img.num2 {
     width: 38rem;
@@ -180,6 +180,165 @@
 
 .fullpage-ad .slidePoint li.active {
   background-color: #fbd34b;
+}
+
+
+/*
+=============
+照片墙
+=============
+*/
+
+.fullpage-ad .slide-ad li span.photo-bg {
+  background-image: url(../img/photo-bg.jpg);
+}
+
+.fullpage-ad .photoList {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1130px;
+  transform: translate(-50%, -50%);
+}
+
+.fullpage-ad .photoList> ul> li {
+  position: relative;
+  z-index: 0;
+  float: left;
+  width: 200px;
+  height: 300px;
+  /*overflow: hidden;*/
+  margin-right: 20px;
+  border: 3px solid #3a5977;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .7);
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+}
+
+.fullpage-ad .photoList> ul> li:hover {
+  box-shadow: 0 0 10px rgba(255, 211, 75, .7)
+}
+
+.fullpage-ad .photoList> ul> li span {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 30;
+  width: 200px;
+  height: 280px;
+  padding: 10px 0;
+  background-color: rgba(0, 0, 0, .7);
+  font-size: 16px;
+  line-height: 200px;
+  color: #fff;
+  text-align: center;
+}
+
+.fullpage-ad .photoList> ul> li span em {
+  display: block;
+  width: 100px;
+  height: 26px;
+  margin: 30px auto 0;
+  border: 1px solid #fff;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 26px;
+  text-align: center;
+}
+
+.fullpage-ad .photoList> ul> li i {
+  position: absolute;
+  display: block;
+  width: 206px;
+  height: 3px;
+  background-color: #fbd34b;
+  opacity: 0;
+}
+
+.fullpage-ad .photoList> ul> li i.topLine {
+  top: -3px;
+  left: -3px;
+}
+
+.fullpage-ad .photoList> ul> li:hover i.topLine {
+  -webkit-animation: drawtopLine .4s ease 1 forwards;
+  -moz-animation: drawtopLine .4s ease 1 forwards;
+  -ms-animation: drawtopLine .4s ease 1 forwards;
+  -o-animation: drawtopLine .4s ease 1 forwards;
+  animation: drawtopLine .4s ease 1 forwards;
+}
+
+@-webkit-keyframes drawtopLine {
+  0% {
+    width: 206px;
+    height: 3px;
+    opacity: 1;
+  }
+  100% {
+    width: 206px;
+    height: 306px;
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes drawtopLine {
+  0% {
+    width: 206px;
+    height: 3px;
+    opacity: 1;
+  }
+  100% {
+    width: 206px;
+    height: 306px;
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes drawtopLine {
+  0% {
+    width: 206px;
+    height: 3px;
+    opacity: 1;
+  }
+  100% {
+    width: 206px;
+    height: 306px;
+    opacity: 1;
+  }
+}
+
+@-o-keyframes drawtopLine {
+  0% {
+    width: 206px;
+    height: 3px;
+    opacity: 1;
+  }
+  100% {
+    width: 206px;
+    height: 306px;
+    opacity: 1;
+  }
+}
+
+@keyframes drawtopLine {
+  0% {
+    width: 206px;
+    height: 3px;
+    opacity: 1;
+  }
+  100% {
+    width: 206px;
+    height: 306px;
+    opacity: 1;
+  }
+}
+
+.fullpage-ad .photoList> ul> li img {
+  position: absolute;
+  z-index: 20;
+  width: 200px;
+  height: 300px;
 }
 
 
