--- a/css/index.css
+++ b/css/index.css
@@ -795,3 +795,390 @@ footer p {
     opacity: 1;
   }
 }
+
+
+/*
+============================
+详情弹出页面
+============================
+*/
+
+.detailCover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(1, 8, 24, .9);
+  text-align: center;
+}
+
+.detailCover h2 {
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.detailCover h2 span {
+  float: right;
+}
+
+
+/*详情图片*/
+
+.picSlideBox {
+  position: absolute;
+  left: 50%;
+  top: 53%;
+  border: 6px solid #fbd34b;
+  transform: translate(-50%, -50%);
+}
+
+.picSlideBox .picSlideBig {
+  /*min-width: 200px;*/
+  /*height: auto;*/
+  max-width: 1200px;
+  max-height: 500px;
+}
+
+.picSlideBox .picSlideBig li {
+  display: none;
+  /*position: absolute;
+  left: 0;
+  top: 0;*/
+  max-width: 1200px;
+  max-height: 500px;
+}
+
+.picSlideBox .picSlideBig li img {
+  width: auto;
+  max-height: 500px;
+}
+
+.picSlideBox .picSlideSmallBox {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 26px;
+  background-color: rgba(55, 91, 127, .7);
+  font-size: 14px;
+  text-align: center;
+  line-height: 26px;
+  color: #fff;
+}
+
+.picSlideBox .picSlideSmallBox span {
+  margin: 0 3px;
+}
+
+.picSlideBox .picSlideBtn {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 50px;
+  height: 26px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.picSlideBox .prev {
+  right: 50px;
+  background: rgba(55, 91, 127, .7) url(../img/details/prev.png) no-repeat center center;
+}
+
+.picSlideBox .next {
+  right: 0;
+  background: rgba(55, 91, 127, .7) url(../img/details/next.png) no-repeat center center;
+}
+
+.picSlideBox .prev:hover,
+.picSlideBox .next:hover {
+  background-color: #fbd34b;
+}
+
+
+/*关闭按钮*/
+
+.closeBtn {
+  position: absolute;
+  top: 3%;
+  right: 2%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.closeBtn i {
+  position: absolute;
+  display: inline-block;
+  width: 2px;
+  height: 40px;
+  background-color: #fbd34b;
+  transform-origin: center 22px;
+}
+
+.closeBtn i:nth-child(1) {
+  left: 17px;
+  top: 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.closeBtn i:nth-child(2) {
+  right: 17px;
+  top: 0;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.closeBtnAnimate:hover i:nth-child(1) {
+  animation: closeBtnA .5s ease-in-out 2;
+}
+
+.closeBtnAnimate:hover i:nth-child(2) {
+  animation: closeBtnB .5s ease-in-out 2;
+}
+
+@-webkit-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-moz-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-ms-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-o-keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@keyframes closeBtnA {
+  0% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  50% {
+    -webkit-transform: rotate(80deg);
+    -moz-transform: rotate(80deg);
+    -o-transform: rotate(80deg);
+    transform: rotate(80deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
+@-webkit-keyframes closeBtnB {
+  0% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: rotate(-80deg);
+    -moz-transform: rotate(-80deg);
+    -o-transform: rotate(-80deg);
+    transform: rotate(-80deg);
+  }
+  100% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@-moz-keyframes closeBtnB {
+  0% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: rotate(-80deg);
+    -moz-transform: rotate(-80deg);
+    -o-transform: rotate(-80deg);
+    transform: rotate(-80deg);
+  }
+  100% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@-ms-keyframes closeBtnB {
+  0% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: rotate(-80deg);
+    -moz-transform: rotate(-80deg);
+    -o-transform: rotate(-80deg);
+    transform: rotate(-80deg);
+  }
+  100% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@-o-keyframes closeBtnB {
+  0% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: rotate(-80deg);
+    -moz-transform: rotate(-80deg);
+    -o-transform: rotate(-80deg);
+    transform: rotate(-80deg);
+  }
+  100% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@keyframes closeBtnB {
+  0% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  50% {
+    -webkit-transform: rotate(-80deg);
+    -moz-transform: rotate(-80deg);
+    -o-transform: rotate(-80deg);
+    transform: rotate(-80deg);
+  }
+  100% {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+
+/*测试页面*/
+
+.testcover {
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, .5);
+}
+
+.testcover .content {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  /*width: 200px;
+  height: 200px;*/
+  background-color: green;
+  transform: translate(-50%, -50%);
+}
+
+.testcover .content .picSlideBig,
+.testcover .content .picSlideSmallBox,
+.testcover .content .picSlideBtn {
+  position: absolute;
+}
